feat(auth): Start auth functionality
- rename tasks to shared
- add user repository
- add user controller, only create method
- add user routes, only create route
- (chore) add auth scope to VS Code settings.json
