# src/entities/User.ts
@@ -1,0 +1,8 @@
+export type User = {
+  id: number;
+  email: string;
+};
+
+export type UserSensitive = User & {
+  password: string;
+};
