# src/routes/shared-tasks.routes.ts
@@ -2,35 +2,35 @@ import {
   getTasks,
   getTask,
   updateTask,
-  postTask,
+  createTask,
   deleteTask,
-} from "../controllers/tasks.controller.ts";
+} from "../controllers/shared-tasks.controller.ts";
 import { HTTP_METHODS } from "../modules/router/const.ts";
 import type { Route } from "../modules/router/types.ts";
 
 export const routes: Route[] = [
   {
-    path: "/tasks",
+    path: "/shared-tasks",
     method: HTTP_METHODS.GET,
     handler: getTasks,
   },
   {
-    path: "/tasks/:id",
+    path: "/shared-tasks/:id",
     method: HTTP_METHODS.GET,
     handler: getTask,
   },
   {
-    path: "/tasks/:id",
+    path: "/shared-tasks/:id",
     method: HTTP_METHODS.PATCH,
     handler: updateTask,
   },
   {
-    path: "/tasks",
+    path: "/shared-tasks",
     method: HTTP_METHODS.POST,
-    handler: postTask,
+    handler: createTask,
   },
   {
-    path: "/tasks/:id",
+    path: "/shared-tasks/:id",
     method: HTTP_METHODS.DELETE,
     handler: deleteTask,
   },
